# uws-client

./: .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
src/uwsclient/: __init__.py  cli.py  client.py  logger.py  models.py  uws.py  uwsclient.py
